--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -1,11 +1,11 @@
-﻿<div ng-controller="staffController">    
+﻿<div ng-controller="staffController" ng-init="init()">    
         <header class="top">
             <div class="logo_section"> <a class="logo" href=""></a><img src="/Content/Assets/images/logo.png" alt="Logo"></a> </div>
             <h1> Setting </h1>
          
             <div class="pull-right movileViewList">
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="#" id="menuiconBar" class="mobileViewIconBar"><i class="fa fa-bars" aria-hidden="true"></i></a></li>
+                    <li><a ng-click="isvisibleMenuiconBar = !isvisibleMenuiconBar" id="menuiconBar" class="mobileViewIconBar"><i class="fa fa-bars" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="top_right settingTopRight">
@@ -126,7 +126,7 @@
             <!-- <div style="width: 100%;text-align: center;position: absolute;z-index: 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="display: none;">Staff breaks saved.</span></div> -->
         </header>
 
-        <div class="left_sidebar">
+        <div class="left_sidebar" ng-show="isvisibleMenuiconBar" style="display:block;">
             <ul class="nav">
                 <li class="side-nav-tooltip" id="side-dashboard" data-toggle="tooltip" data-original-title="Dashboard" data-placement="right">
                     <a ng-click="redirecttodashboard()" data-toggle="tab" class="setmore-icon-home cursorhand" id="startDashboard"><small>Dashboard</small></a>
@@ -313,34 +313,34 @@
                                     <h3>Staff (1)</h3>
                                 </div>
                                 <div class="categoryButton">
-                                    <button class="pull-right btn btn-circle" id="settingCategory" title="" data-original-title="Add New Staff">
+                                    <button class="pull-right btn btn-circle" id="settingCategory" title="" data-original-title="Add New Staff" ng-click="IsVisibleAddNewStaffPopUp = !IsVisibleAddNewStaffPopUp">
                                         <i class="fa fa-plus" aria-hidden="true"></i>
                                     </button>
                                     <div class="row">
 
                                         <div class="col-md-12">
-                                            <div id="newaddCategoryPopup" class="addCustomer bottomArrow  addCategoryPopup">
+                                            <div id="newaddCategoryPopup" class="addCustomer bottomArrow addCategoryPopup" style="display:block;" ng-show="IsVisibleAddNewStaffPopUp" >
                                                 <div class="arrow"></div>
                                                 <h3 class="addCustomerTitle">Add New Staff</h3>
-                                                <div class="addcustomerContent">
-                                                    <div class="customerField form-group">
-                                                        <input id="categoryNewName" class="form-control" type="text" placeholder="Staff Name">
-                                                    </div>
-                                                    <div class="customerField form-group">
-                                                        <input id="categoryNewName" class="form-control" type="text" placeholder="Staff Email">
-                                                    </div>
-
-                                                    <div class="row">
-                                                        <div class="col-md-6 col-xs-6">
-                                                            <button id="addcategoryBtn" class="btn  add_category_btn addCustomerbtn">Add Staff</button>
+                                                <form name="AddStaffForm" ng-submit="AddStaff(AddStaffForm)" novalidate class="css-form">
+                                                    <div class="addcustomerContent">
+                                                        <div class="customerField form-group">
+                                                            <input id="categoryNewName" class="form-control" type="text" placeholder="Staff Name" ng-model="StaffName" name="StaffName" required>
                                                         </div>
-                                                        <div class="col-md-6 col-xs-6">
-                                                            <button id="cancelBtn" class="btn btn-default cateCancelbtn">Cancel</button>
+                                                        <div class="customerField form-group">
+                                                            <input id="categoryNewName" class="form-control" type="text" placeholder="Staff Email" ng-model="StaffEmail">
+                                                        </div>
+
+                                                        <div class="row">
+                                                            <div class="col-md-6 col-xs-6">
+                                                                <button id="addcategoryBtn" type="submit" class="btn  add_category_btn addCustomerbtn">Add Staff</button>
+                                                            </div>
+                                                            <div class="col-md-6 col-xs-6">
+                                                                <button id="cancelBtn" class="btn btn-default cateCancelbtn" ng-click="IsVisibleAddNewStaffPopUp=false">Cancel</button>
+                                                            </div>
                                                         </div>
                                                     </div>
-
-
-                                                </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -348,18 +348,18 @@
                                 </div>
                                 <div class="categoryList staffList">
                                     <ul>
-                                        <li>
-                                            <a href="#" class="staffUser">
+                                        <li ng-repeat="item in ListofStaff">
+                                            <a ng-click="EditStaff(item)" class="staffUser cursorhand">
                                                 <img src="/Content/Assets/images/provider_img2.png">
-                                                <span class="categoryServices">David</span>
+                                                <span class="categoryServices">{{item.FirstName}}</span>
                                             </a>
                                         </li>
-                                        <li>
+                                        <!--<li>
                                             <a href="#" class="staffUser">
                                                 <img src="/Content/Assets/images/provider_img2.png">
                                                 <span class="categoryServices">Scott</span>
                                             </a>
-                                        </li>
+                                        </li>-->
 
                                     </ul>
                                 </div>
@@ -410,7 +410,7 @@
                                                                 </span>
                                                             </label>
                                                             <div class="col-md-6 col-sm-6 col-xs-6">
-                                                                <input type="text" class="customerName form-control" value="Mark" id="name" name="name" placeholder="Mark">
+                                                                <input type="text" class="customerName form-control"  id="name" name="name" placeholder="Mark" ng-model="staffName" ng-blur="UpdateStaff()">
                                                                 <div class="servicesTextareaDiv staffTextaria">
                                                                     <textarea class="form-control" placeholder="Service Description" maxlength="500"></textarea>
                                                                 </div>
@@ -431,13 +431,13 @@
                                                         <div class="form-group">
                                                             <label class="control-label col-md-2 col-xs-2 col-sm-12">Email</label>
                                                             <div class="col-md-6 col-xs-6 col-sm-12">
-                                                                <input type="email" class="form-control" id="email" placeholder="mark@bm.com" name="email">
+                                                                <input type="email" class="form-control" id="email" placeholder="mark@bm.com" name="email" ng-model="staffEmail" ng-blur="UpdateStaff()">
                                                             </div>
                                                         </div>
                                                         <div class="form-group">
                                                             <label class="control-label col-md-2 col-xs-2 col-sm-12">CC Emails To</label>
                                                             <div class="col-md-6 col-xs-6 col-sm-12">
-                                                                <input type="email" class="form-control" id="email" placeholder="CC Email" name="email">
+                                                                <input type="email" class="form-control" id="email" placeholder="CC Email" name="email" >
                                                             </div>
                                                         </div>
 
@@ -586,7 +586,7 @@
                                                         <div class="col-md-10">
                                                             <div class="serviceProvideSec">
                                                                 <h3 class="serviceProText">Services David Provides (2):</h3>
-                                                                <div class="allStaffDiv">
+                                                                <!--<div class="allStaffDiv">
                                                                     <div class="dropdown serviceprovideBtn">
                                                                         <div class="checkbox active">
                                                                             <label class="labelBox" id="clickLabel">
@@ -596,8 +596,8 @@
                                                                             </label>
                                                                         </div>
                                                                     </div>
-                                                                </div>
-                                                                <div class="row">
+                                                                </div>-->
+                                                                <div class="row" ng-repeat="item in ListofServices">
                                                                     <div class="col-md-8">
                                                                         <div class="sampleStaffService">
                                                                             <div class="dropdown serviceprovideBtn">
@@ -6337,8 +6337,6 @@
 	 $(function () {
 		$('#datetimepicker5').datetimepicker();
      });
-
-
 
         </script>
 
